namespace AttendanceApp {
    public partial class Notices {
        protected global::System.Web.UI.WebControls.PlaceHolder phAdminNoticeUpload;
        protected global::System.Web.UI.WebControls.TextBox txtNoticeTitle;
        protected global::System.Web.UI.WebControls.DropDownList ddlNoticeMainCategory;
        protected global::System.Web.UI.WebControls.DropDownList ddlNoticeCategory;
        protected global::System.Web.UI.WebControls.HiddenField hfNoticeTextContent;
        protected global::System.Web.UI.WebControls.Button btnPublishTextNotice;
        protected global::System.Web.UI.WebControls.FileUpload fuNotice;
        protected global::System.Web.UI.WebControls.TextBox txtFileNoticeTitle;
        protected global::System.Web.UI.WebControls.DropDownList ddlFileNoticeMainCategory;
        protected global::System.Web.UI.WebControls.DropDownList ddlFileNoticeCategory;
        protected global::System.Web.UI.WebControls.Button btnUploadNotice;
        protected global::System.Web.UI.WebControls.Repeater rptNotices;
        protected global::System.Web.UI.WebControls.PlaceHolder phNoNotices;
        protected global::System.Web.UI.WebControls.HiddenField hfRenameData;
        protected global::System.Web.UI.WebControls.Button btnRenameSubmit;
        protected global::System.Web.UI.WebControls.HiddenField hfEditNoticeData;
        protected global::System.Web.UI.WebControls.Button btnEditNoticeSubmit;
    }
}
